[tool.poetry]
name = "linprog_curvefit"
version = "0.1.0"
description = "Curve fitting with linear programming."
authors = ["Don Robert Pornaras <donrobert.pornaras@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
ortools = "^7.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
